Breaking change: bump to Java 17 and use a few text blocks here and there to improve code readability. Some command line cleanup. Add a test case.